# PlantSyncAddon

./: .gitignore  CLAUDE.md  CMakeLists.txt  Green Accent PLANTS.xml  INST INSTALACJE.xml  MANUAL.md  README.md  TODO.md  build.sh  configure.sh  deploy.cmd  deploy.sh  rebuild.sh
RFIX/: ClassSyncFix.grc  PlantSyncFix.grc
RFIX.win/: ClassSync.rc2  PlantSync.rc2
RINT/: ClassSync.grc
Src/: APIEnvir.h  ChangeLog.cpp  ChangeLog.hpp  ClassSync.cpp  ClassSyncPalette.cpp  ClassSyncPalette.hpp  ClassificationData.cpp  ClassificationData.hpp  FileLock.cpp  FileLock.hpp  XmlReader.cpp  XmlReader.hpp  XmlWriter.cpp  XmlWriter.hpp
docs/: 2026-02-28-archicad-api.md  2026-02-28-project-context.md  2026-03-02-sync-redesign.md  archicad-api.md  build-notes.md  project-context.md
